force-app/main/default/objects/Risk__c/Risk__c.object-meta.xml
<CustomObject>
    <description>R3 Project Risk Log</description>
    <label>Risk</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>