force-app/main/default/objects/Risk__c/fields/Actionee__c.field-meta.xml
<CustomField>
    <fullName>Actionee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person(s) who will implement the action(s) described in the risk response.</inlineHelpText>
    <label>Actionee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>