force-app/main/default/objects/Risk__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Full description of risk. In terms of the cause, event (threat or opportunity) and effect (description in words of the impact).</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>