force-app/main/default/objects/Risk__c/fields/Proximity__c.field-meta.xml
<CustomField>
    <fullName>Proximity__c</fullName>
    <inlineHelpText>How close the the present time is the risk likely to happen?</inlineHelpText>
    <label>Proximity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>