force-app/main/default/objects/Risk__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <inlineHelpText>Actions to resolve the risk (should be aligned to the chosen response categories. Note that more than one risk response may apply to a risk).</inlineHelpText>
    <label>Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>