force-app/main/default/objects/Risk__c/fields/Response_Category__c.field-meta.xml
<CustomField>
    <fullName>Response_Category__c</fullName>
    <inlineHelpText>How the project will treat the risk?</inlineHelpText>
    <label>Response Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avoid</fullName>
            </value>
            <value>
                <fullName>Reduce</fullName>
            </value>
            <value>
                <fullName>Fallback</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Share</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>